--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-"name": "CrowBot-MF",
+"name": "hayabu-MF",
 "version": "2.1.0",
 "description": "Simple WhatsApp Bot Multi Device",
 "main": "starcore.js",
